--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:e-commerce": "node dist/e-commerce/server/server.mjs",
-    "json:server": "json-server --watch database.json"
+    "json:server": "json-server --watch database.json",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +43,7 @@
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
+    "@cypress/schematic": "^2.5.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -54,6 +58,7 @@
     "nodemon": "^3.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "cypress": "latest"
   }
 }
