--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,12 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src",
+    "./cypress.config.ts"
+  ],
+  "exclude": [
+    "./cypress.config.ts"
+  ]
 }
