--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "lint":"eslint ."
+    "lint": "eslint ."
   },
   "private": true,
   "dependencies": {
@@ -49,6 +49,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.19",
+    "cypress": "latest",
+    "eslint": "^9.15.0",
     "jasmine-core": "~5.1.0",
     "json-server": "^1.0.0-alpha.23",
     "karma": "~6.4.0",
@@ -59,7 +61,6 @@
     "nodemon": "^3.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.2",
-    "cypress": "latest"
+    "typescript": "~5.4.2"
   }
 }
