--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.5",
+    "@angular-eslint/builder": "17.5.3",
+    "@angular-eslint/eslint-plugin": "17.5.3",
+    "@angular-eslint/eslint-plugin-template": "17.5.3",
+    "@angular-eslint/schematics": "17.5.3",
+    "@angular-eslint/template-parser": "17.5.3",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
@@ -48,9 +53,11 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "autoprefixer": "^10.4.19",
     "cypress": "latest",
-    "eslint": "^9.15.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~5.1.0",
     "json-server": "^1.0.0-alpha.23",
     "karma": "~6.4.0",
