--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,42 +35,10 @@ lint:
 
 test:
   stage: quality
-  needs: ["install"]
-  before_script:
-    # # Download Chrome
-    # - apk add chromium
-    # - export CHROME_BIN=/usr/bin/chromium-browser
-    # - export CHROME_PATH=/usr/lib/chromium/
-    # # Download Firefox
-    # - apk add firefox-esr
-    # - export FIREFOX_BIN=/usr/bin/firefox
-    # - export FIREFOX_PATH=/usr/lib/firefox/
-    # # X Server
-    # - apk add xvfb
-    # - export DISPLAY=:99
-    # - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-     # Install Chrome dependencies
-    - apk update
-    - apk add chromium chromium-chromedriver
-    - apk add --no-cache nss freetype freetype-dev harfbuzz ca-certificates ttf-freefont
-
-    # Set Chrome binary path
-    - export CHROME_BIN=/usr/bin/chromium-browser
-    - export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
-    
-    # Optional: Install X virtual framebuffer if needed
-    - apk add xvfb
-    - export DISPLAY=:99
-    - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+  image: zenika/alpine-chrome:with-node
   script:
-    - npm run test -- --browsers=Headless_Chrome --no-watch
-  cache:
-    key:
-      files:
-        - package.json
-    paths:
-      - node_modules
-    policy: pull
+    - npm ci
+    - npm run test-ci
 
 assemble:
   stage: assemble
