--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ assemble:
   stage: assemble
   needs: ["test", "lint"]
   script:
-    - npm run build
+    - npm run build --configuration productionv
   artifacts:
     paths:
       - $CI_PROJECT_DIR/dist
