--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "lint": "eslint .",
-    "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage"
+    "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage",
+    "serve": "ng serve --host 0.0.0.0 --disable-host-check"
   },
   "private": true,
   "dependencies": {
